[gd_scene format=3 uid="uid://hwo4yprdpf48"]

[ext_resource type="Script" uid="uid://cq5i83xl035d2" path="res://main/main.gd" id="1_53q0u"]

[node name="main" type="Control" unique_id=889155489]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53q0u")

[node name="GraphEdit" type="GraphEdit" parent="." unique_id=149700153]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
minimap_enabled = false
show_menu = false
show_zoom_label = true

[node name="NodeMenu" type="PopupMenu" parent="." unique_id=1431223696]
oversampling_override = 1.0

[node name="ActionMenu" type="PopupMenu" parent="." unique_id=1798222567]

[node name="UI" type="CanvasLayer" parent="." unique_id=1226545786]

[node name="TopBar" type="HBoxContainer" parent="UI" unique_id=1771055798]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="SaveBtn" type="Button" parent="UI/TopBar" unique_id=158642608]
layout_mode = 2
text = "üíæ ‰øùÂ≠òÈ°πÁõÆ"

[node name="LoadBtn" type="Button" parent="UI/TopBar" unique_id=948180440]
layout_mode = 2
text = "üìÇ ËØªÂèñÈ°πÁõÆ"

[node name="ExportBtn" type="Button" parent="UI/TopBar" unique_id=2100965356]
layout_mode = 2
text = "üöÄ ÂØºÂá∫‰ª£Á†Å"

[node name="SaveDialog" type="FileDialog" parent="UI" unique_id=907728981]
access = 2

[node name="LoadDialog" type="FileDialog" parent="UI" unique_id=573968503]
title = "Open a File"
ok_button_text = "Load"
file_mode = 0
access = 2

[node name="ExportDialog" type="FileDialog" parent="UI" unique_id=508706651]
access = 2

[node name="ExportWindow" type="Window" parent="UI" unique_id=1636276483]
oversampling_override = 1.0
size = Vector2i(300, 150)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ExportWindow" unique_id=1565774855]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI/ExportWindow/VBoxContainer" unique_id=889159890]
layout_mode = 2
text = "Python ÁΩëÁªúÁ±ªÂêç:"

[node name="ClassInput" type="LineEdit" parent="UI/ExportWindow/VBoxContainer" unique_id=1144374603]
layout_mode = 2
placeholder_text = "MyNeuralNetwork"

[node name="ConfirmExportBtn" type="Button" parent="UI/ExportWindow/VBoxContainer" unique_id=1685261144]
layout_mode = 2
text = "ÈÄâÊã©Ë∑ØÂæÑÂπ∂ÂØºÂá∫..."

[node name="MessageDialog" type="AcceptDialog" parent="UI" unique_id=733552810]

[connection signal="pressed" from="UI/TopBar/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="UI/TopBar/LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="UI/TopBar/ExportBtn" to="." method="_on_export_btn_pressed"]
[connection signal="file_selected" from="UI/SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="UI/LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="UI/ExportDialog" to="." method="_on_export_dialog_file_selected"]
[connection signal="pressed" from="UI/ExportWindow/VBoxContainer/ConfirmExportBtn" to="." method="_on_confirm_export_btn_pressed"]
